# earthquake-data

./: .env.example  .gitignore  Makefile  airflow-docker-compose.yaml  airflow.Dockerfile  hive-docker-compose.yaml  hive.Dockerfile  infra-docker-compose.yaml  pom.xml  pyproject.toml  requirements.txt  spark-docker-compose.yaml  spark.Dockerfile
dags/: clockify__time_entries.py  clockify_pipeline.py
hive/conf/: hive-site.xml
jupyter/: HiveCatalog.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  read_iceberg_table.ipynb  sample.parquet
jupyter/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: ClockifyAPI.py
src/providers/: S3.py  Spark.py
src/tasks/raw/: raw_clockify__time_entries.py  raw_clockify__time_entries__parquet.py
src/tasks/staging/: clockify_ingestion.py  clockify_parquet.py  stg_clockify__time_entries.py
